refactor: modern filter